--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@remix-run/dev": "^1.4.3",
     "@remix-run/eslint-config": "^1.4.3",
     "@remix-run/serve": "^1.4.3",
+    "@tailwindcss/typography": "^0.5.2",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
     "autoprefixer": "^10.4.7",
