--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@remix-run/node": "^1.4.3",
     "@remix-run/react": "^1.4.3",
     "@remix-run/vercel": "^1.4.3",
+    "@tailwindcss/line-clamp": "^0.4.0",
     "@vercel/node": "^1.14.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
