--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@remix-run/vercel": "^1.4.3",
     "@tailwindcss/line-clamp": "^0.4.0",
     "@vercel/node": "^1.14.0",
+    "fathom-client": "^3.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
